--- a/backend/Move.toml
+++ b/backend/Move.toml
@@ -1,8 +1,8 @@
 [package]
 name = "predictionMarket"
 edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
-# license = "MIT"
-# authors = ["Grillet-Aubert Alexis (@Krut007)"]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
+license = "MIT"
+authors = ["Grillet-Aubert Alexis (@Krut007)"]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/devnet" }
